fixes before production 1
