# storage/api-docs/api-docs.json
@@ -62,6 +62,113 @@
                 }
             }
         },
+        "/datasets/{id}": {
+            "get": {
+                "tags": [
+                    "Dataset"
+                ],
+                "summary": "Dataset get by ID",
+                "operationId": "9a82b19cc4e22b94a7da5536ccb91813",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Dataset id",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Dataset"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "users/{id}/datasets": {
+            "get": {
+                "tags": [
+                    "Dataset"
+                ],
+                "summary": "Get datasets of user",
+                "operationId": "2908beaa6f5069295b52e6ac50a718c4",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User id",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Dataset"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Dataset"
+                ],
+                "summary": "Create dataset for user",
+                "operationId": "b681c12fcdbb297e847154f25e46bdd8",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User id",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Dataset"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Dataset"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/users/{id}/roles": {
             "post": {
                 "tags": [
@@ -362,27 +469,62 @@
                     "type": {
                         "title": "type",
                         "description": "type",
-                        "example": 1
+                        "example": "CREATOR"
                     },
                     "content": {
                         "title": "content",
                         "description": "content",
-                        "example": 1
+                        "example": "Documents 123"
                     },
                     "status": {
                         "title": "status",
                         "description": "status",
-                        "example": 1
+                        "example": "PENDING"
                     },
                     "comment": {
                         "title": "comment",
                         "description": "comment",
-                        "example": 1
+                        "example": "Wrong name"
+                    },
+                    "created_at": {
+                        "title": "created_at",
+                        "description": "created_at",
+                        "example": "2022-01-22T21:34:30.000000"
+                    },
+                    "updated_at": {
+                        "title": "updated_at",
+                        "description": "updated_at",
+                        "example": "2022-01-22T21:34:30.000000"
                     }
                 },
                 "type": "object",
                 "xml": {
                     "name": "Dataset"
+                }
+            },
+            "Role": {
+                "title": "Role",
+                "description": "Role model",
+                "properties": {
+                    "type": {
+                        "title": "type",
+                        "description": "APPLICANT or CREATOR or ADMIN or MODERATOR",
+                        "example": "APPLICANT"
+                    },
+                    "created_at": {
+                        "title": "created_at",
+                        "description": "created_at",
+                        "example": "2022-01-22T21:34:30.000000"
+                    },
+                    "updated_at": {
+                        "title": "updated_at",
+                        "description": "updated_at",
+                        "example": "2022-01-22T21:34:30.000000"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Role"
                 }
             },
             "User": {
@@ -418,6 +560,24 @@
                         "title": "media_id",
                         "description": "media_id",
                         "example": "1"
+                    },
+                    "created_at": {
+                        "title": "created_at",
+                        "description": "created_at",
+                        "example": "2022-01-22T21:34:30.000000"
+                    },
+                    "updated_at": {
+                        "title": "updated_at",
+                        "description": "updated_at",
+                        "example": "2022-01-22T21:34:30.000000"
+                    },
+                    "roles": {
+                        "title": "roles",
+                        "description": "roles",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Role"
+                        }
                     }
                 },
                 "type": "object",
